# bazel-gomobile

./: 0001-fix-go_repository-bazel-BUILD-files.patch  0002-add-support-for-go-enum-to-ios.patch  0002-improve_enum_array_go_mobile.patch  0003-add-support-for-array-to-ios.patch  0004-Add-support-for-enum-and-array-for-android.patch  0005-Generate-an-XCode-xcFramework-out-of-lib.patch  LICENSE  MODULE.bazel  README.md  deps.bzl  gomobile.bzl
