module(
    name = "gomobile_bind",
    version = "1.0.0",
)

bazel_dep(name = "rules_go", version = "0.59.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "gazelle", version = "0.47.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_android", version = "0.6.5")

android_sdk_repository_extension = use_extension(
    "@rules_android//rules/android_sdk_repository:rule.bzl",
    "android_sdk_repository_extension",
)
use_repo(android_sdk_repository_extension, "androidsdk")

register_toolchains("@androidsdk//:sdk-toolchain", "@androidsdk//:all")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
use_repo(
    go_deps,
    "org_golang_x_mobile",
)
